# ratatoskr

./: .gitignore  .goreleaser.yaml  DEMO.md  README.md  builders.json  commonlisp.shen  go.mod  main.go  parity_test.go  portable_test.go  pyproject.toml  ratatoskr.shen  ratatoskr_cli.py  test_portable.py  yggdrasil.shen
.claude/tracking/: charts.html  key-prompts.md  tracking.db
.claude/tracking/key-prompts/: 2026-06-11.md
.github/workflows/: go.yml  portability.yml  release.yml
KLambda/: PROVENANCE.md
archive/: README.md
builders/lisp/: build.sh  build.shen  driver.lsp
builders/scheme/: build.sh  build.shen
builders/swift/: build.sh
docs/: parity.md  reachability.md
examples/: demo_ideas.md
examples/authorization-engine/: PROMPT.md
examples/parser-workbench/: PROMPT.md
pybin/: hatch_build.py
pybin/ratatoskr_launch/: __init__.py
tests/: fib.shen  hello.shen  parity.expected  parity.shen  prolog.shen
